--- a/Packages/Delphi 2007/VirtualTreesR.dproj
+++ b/Packages/Delphi 2007/VirtualTreesR.dproj
@@ -78,10 +78,10 @@
     <DelphiCompile Include="VirtualTreesR.dpk">
       <MainSource>MainSource</MainSource>
     </DelphiCompile>
-    <DCCReference Include="..\Source\VirtualTrees.pas" />
-    <DCCReference Include="..\Source\VTAccessibility.pas" />
-    <DCCReference Include="..\Source\VTAccessibilityFactory.pas" />
-    <DCCReference Include="..\Source\VTHeaderPopup.pas" />
+    <DCCReference Include="..\..\Source\VirtualTrees.pas" />
+    <DCCReference Include="..\..\Source\VTAccessibility.pas" />
+    <DCCReference Include="..\..\Source\VTAccessibilityFactory.pas" />
+    <DCCReference Include="..\..\Source\VTHeaderPopup.pas" />
     <DCCReference Include="vcl.dcp" />
     <DCCReference Include="vclx.dcp" />
   </ItemGroup>
