--- a/trunk/Packages/Delphi XE2/VirtualTreesD.dproj
+++ b/trunk/Packages/Delphi XE2/VirtualTreesD.dproj
@@ -35,6 +35,7 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
+			<DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
 			<DCC_Description>VirtualTreeView Controls</DCC_Description>
 			<DCC_CBuilderOutput>All</DCC_CBuilderOutput>
 			<DllSuffix>16</DllSuffix>
