Now explicitly specifying the HPP output path as the IDE's default path $(BDSCOMMONDIR)\HPP is not among the C++ Builder search paths.

--- a/Packages/RAD Studio XE6/VirtualTreesD.dproj
+++ b/Packages/RAD Studio XE6/VirtualTreesD.dproj
@@ -30,6 +30,7 @@
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
+        <DCC_HppOutput>..\..\Source</DCC_HppOutput>
         <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
         <DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
         <DCC_Description>VirtualTreeView Controls</DCC_Description>
