--- a/trunk/Packages/RAD Studio XE3/VirtualTreesR.dproj
+++ b/trunk/Packages/RAD Studio XE3/VirtualTreesR.dproj
@@ -47,6 +47,7 @@
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
+        <DCC_HppOutput>..\..\Source</DCC_HppOutput>
         <DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
         <DCC_CBuilderOutput>All</DCC_CBuilderOutput>
         <DllSuffix>17</DllSuffix>
