--- a/trunk/Packages/RAD Studio XE4/VirtualTreesR.dproj
+++ b/trunk/Packages/RAD Studio XE4/VirtualTreesR.dproj
@@ -48,6 +48,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
         <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
+        <DCC_HppOutput>..\..\Source</DCC_HppOutput>
         <DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
         <DllSuffix>18</DllSuffix>
         <RuntimeOnlyPackage>true</RuntimeOnlyPackage>
