Now explicitly specifying the HPP output path as the IDE's default output path $(BDSCOMMONDIR)\HPP is not among the default C++ Builder search paths. That way Install.txt does not an freshly installed RAD Studio / C+ Builder.

--- a/Packages/RAD Studio XE3/VirtualTreesR.dproj
+++ b/Packages/RAD Studio XE3/VirtualTreesR.dproj
@@ -47,6 +47,7 @@
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
+        <DCC_HppOutput>..\..\Source</DCC_HppOutput>
         <DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
         <DCC_CBuilderOutput>All</DCC_CBuilderOutput>
         <DllSuffix>17</DllSuffix>
