--- a/trunk/Packages/RAD Studio XE6/VirtualTreesD.dproj
+++ b/trunk/Packages/RAD Studio XE6/VirtualTreesD.dproj
@@ -52,7 +52,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
         <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
-        <DCC_UsePackage>vcl;VirtualTreesD;$(DCC_UsePackage)</DCC_UsePackage>
+        <DCC_UsePackage>vcl;VirtualTreesR;$(DCC_UsePackage)</DCC_UsePackage>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -71,11 +71,8 @@
         </DelphiCompile>
         <DCCReference Include="..\..\Design\VirtualTrees.dcr"/>
         <DCCReference Include="DesignIDE.dcp"/>
+        <DCCReference Include="VirtualTreesR.dcp"/>
         <DCCReference Include="..\..\Design\VirtualTreesReg.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.pas"/>
-        <DCCReference Include="..\..\Source\VTHeaderPopup.pas"/>
-        <DCCReference Include="..\..\Source\VTAccessibilityFactory.pas"/>
-        <DCCReference Include="..\..\Source\VTAccessibility.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
