--- a/Packages/RAD Studio XE7/VirtualTreesD.dproj
+++ b/Packages/RAD Studio XE7/VirtualTreesD.dproj
@@ -36,7 +36,7 @@
         <DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
         <DCC_Description>VirtualTreeView Controls</DCC_Description>
         <DCC_CBuilderOutput>All</DCC_CBuilderOutput>
-        <DllSuffix>20</DllSuffix>
+        <DllSuffix>21</DllSuffix>
         <DesignOnlyPackage>true</DesignOnlyPackage>
         <DCC_UnitSearchPath>..\..\source;.\$(Platform)\$(Config);$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;Vcl;Vcl.Imaging;Vcl.Touch;Vcl.Samples;Vcl.Shell;$(DCC_Namespace)</DCC_Namespace>
@@ -53,7 +53,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
         <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
-        <DCC_UsePackage>vcl;VirtualTreesD;$(DCC_UsePackage)</DCC_UsePackage>
+        <DCC_UsePackage>vcl;VirtualTreesR;$(DCC_UsePackage)</DCC_UsePackage>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -72,11 +72,8 @@
         </DelphiCompile>
         <DCCReference Include="..\..\Design\VirtualTrees.dcr"/>
         <DCCReference Include="DesignIDE.dcp"/>
+        <DCCReference Include="VirtualTreesR.dcp"/>
         <DCCReference Include="..\..\Design\VirtualTreesReg.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.pas"/>
-        <DCCReference Include="..\..\Source\VTHeaderPopup.pas"/>
-        <DCCReference Include="..\..\Source\VTAccessibilityFactory.pas"/>
-        <DCCReference Include="..\..\Source\VTAccessibility.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
