Added folder like #1083 to ignore list, which typically contain projects for reproducing reported issues.

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ VirtualTreeView.zip
 *.#00
 *.pch
 *.skincfg
+*.a
+Packages/RAD Studio XE3/VirtualTreesR.lib
+*.lib
+
+# Folder with repro projects #
+##############################
+/#*
