Added folder like #1083 to ignore list, which typically contain projects for reproducing reported issues.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ VirtualTreeView.zip
 *.a
 Packages/RAD Studio XE3/VirtualTreesR.lib
 *.lib
+
+# Folder with repro projects #
+##############################
+/#*
