Added unit VirtualTrees.Types to fix compiler warning.

--- a/Packages/RAD Studio 10.4+/VirtualTreesR.dproj
+++ b/Packages/RAD Studio 10.4+/VirtualTreesR.dproj
@@ -76,6 +76,7 @@
         <DCCReference Include="..\..\Source\VirtualTrees.Actions.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Export.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Utils.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Types.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
